# cfn-elastic-ip-asg-attachment

./: Makefile  README.md  buildspec.yml  package.sh  pyproject.toml
cfn_elastic_ip_asg_attachment/: main.py
cfn_elastic_ip_asg_attachment/attachments/: associate.py  disassociate.py
cfn_elastic_ip_asg_attachment/instances/: get_instances_in_asg.py
cfn_elastic_ip_asg_attachment/utils/: assume_role.py  validate_properties.py
ci/: codepipeline.yml
scripts/: pipeline.sh
stacks/: lambda.yml
stacks/parameters/lambda/: live.json
